@@ -3,13 +3,12 @@ Hash: SHA256
 
 DIST authlogic-oid-1.0.4.gem 24064 RMD160 551fdf9707df1929ae739fa11a31a5ebf52a611a SHA1 8222cd2d0445d2625e175f26862446068b76a9fc SHA256 a15226df0835a585e6a111f93bf941b108d135448b63d4d231530afaa0c0bfab
 EBUILD authlogic-oid-1.0.4-r1.ebuild 835 RMD160 50d287990bdff4874b89790053c884ab05e971e5 SHA1 bf50badda20e2a9b130b82f82d75f150cdadd12c SHA256 bc17e006cc3a0b1f8a11a033f21a3c40be45a46f604ee9f2d75f9d6522cede71
-EBUILD authlogic-oid-1.0.4.ebuild 500 RMD160 afd3603119952c33f1208fd2628f3524aff230c5 SHA1 2785f22ced9514c5525fa65bbcdea5b9a957c0e4 SHA256 d35afa74c5c03c9bb1634868f141fd6ebb1759422475a0dc37d43a3e3442ccea
-MISC ChangeLog 695 RMD160 6496ec4da0541df01cea27e42291e08f60adf2d6 SHA1 4990d2d8b49a14bc6641e5ad116c93558af595ac SHA256 25d44eb965494ac25525598c85f25f9f1bcd29057bddcc5c0c085b0a828fe3ca
+MISC ChangeLog 799 RMD160 95a4a1ec03f60a56fb919c01a61c3ee72b49412b SHA1 d283063305612d046703ee90d85852602f0789d8 SHA256 127260fcab89b48d60f14f0a93bf7294c022cf92a458fc29d829c5c06470721a
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.15 (GNU/Linux)
+Version: GnuPG v2.0.16 (GNU/Linux)
 
-iF4EAREIAAYFAkxlUZgACgkQZihJkut28SvU8QD+IzISU5Au0snu5uRduDO5C2qP
-2Hx/HcMY+NxV+BrgtfQBAMCBU5zgyVwvMbLYRlUMdqz5WJNbc6FFbqns+oFNcNXE
-=c0bQ
+iF4EAREIAAYFAkyA3LwACgkQZihJkut28Sv+xwEAgeILYxvBJIKK2Q0Gb7XZeFQG
+O+hFiQSJHhPK+cxZ4qcA/RO7l4/R82oxPBuWEyyBvxceuIOBimLNu98rdsuuFkr4
+=FIKz
 -----END PGP SIGNATURE-----
