@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  03 Sep 2010; Hans de Graaff <graaff@gentoo.org>
+  -authlogic-oid-1.0.4.ebuild:
+  Remove old version.
+
 *authlogic-oid-1.0.4-r1 (13 Aug 2010)
 
   13 Aug 2010; Hans de Graaff <graaff@gentoo.org>
